Readme, code cleanup

--- a/test.ipynb
+++ b/test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ed2e6ef6",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
     "    # Load checkpoint\n",
     "    state_dict = torch.hub.load_state_dict_from_url(state_dict_url, map_location=torch.device('cpu'))\n",
     "\n",
-    "    # 🔧 Auto-handle DataParallel \"module.\" prefixes\n",
+    "    # handle dataparallel annoyances\n",
     "    from collections import OrderedDict\n",
     "    new_state_dict = OrderedDict()\n",
     "    for k, v in state_dict.items():\n",
