--- a/data/test_mpii_dataset.ipynb
+++ b/data/test_mpii_dataset.ipynb
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "capstone_env",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
